build(deps): flutter_local_notifications

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
     }
@@ -86,4 +87,5 @@ flutter {
 
 dependencies {
     implementation "androidx.core:core-splashscreen:1.0.1"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.5"
 }
