--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -1,4 +1,5 @@
 [
+  {"key": "API_BASE_URL", "serializedType": "String", "dartType": "String", "default": "''"},
   {"key": "DESKTOP_NOW_PLAYING_BAR_COLOR_PALETTE", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DESKTOP_NOW_PLAYING_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
   {"key": "DESKTOP_NOW_PLAYING_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
