chore: update LYRICS_VIEW_FOCUSED_FONT_SIZE & LYRICS_VIEW_UNFOCUSED_FONT_SIZE defaults

--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -7,10 +7,10 @@
   {"key": "IDENTIFIER", "serializedType": "String", "dartType": "String", "default": "const Uuid().v4()"},
   {"key": "LOCALIZATION", "serializedType": "Json", "dartType": "LocalizationData", "default": "const LocalizationData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
-  {"key": "LYRICS_VIEW_FOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "64.0"},
+  {"key": "LYRICS_VIEW_FOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "isDesktop ? 64.0: 48.0"},
   {"key": "LYRICS_VIEW_FOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
   {"key": "LYRICS_VIEW_TEXT_ALIGN", "serializedType": "Integer", "dartType": "TextAlign", "default": "TextAlign.start.index"},
-  {"key": "LYRICS_VIEW_UNFOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "28.0"},
+  {"key": "LYRICS_VIEW_UNFOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "isDesktop ? 28.0: 24.0"},
   {"key": "LYRICS_VIEW_UNFOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
   {"key": "MEDIA_LIBRARY_ADD_PLAYLIST_TO_NOW_PLAYING", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "MEDIA_LIBRARY_ALBUM_GROUPING_PARAMETERS", "serializedType": "Json", "dartType": "Set<AlbumGroupingParameter>", "default": "[AlbumGroupingParameter.album.index]"},
