--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:windowSoftInputMode="adjustResize"
             tools:ignore="Instantiatable">
             <meta-data
+                android:name="flutter_deeplinking_enabled"
+                android:value="false" />
+            <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
             <meta-data
@@ -81,8 +84,8 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:exported="false"
-            android:name="com.dexterous.flutterlocalnotifications.ActionBroadcastReceiver" />
+            android:name="com.dexterous.flutterlocalnotifications.ActionBroadcastReceiver"
+            android:exported="false" />
         <!--
             Don't delete the meta-data below.
             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java
